--- a/web/app/index.html
+++ b/web/app/index.html
@@ -37,14 +37,12 @@
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <!-- //angularfire -->
-              <li><a ng-href="#/chat">chat</a></li>
-
+            <ul class="nav navbar-nav" ng-controller="HeaderCtrl">
+              <li ng-class="{ active: isActive('/')}"><a href="#/">Machines</a></li>
+              <li ng-class="{ active: isActive('/status')}"><a ng-href="#/status">Status</a></li>
             </ul>
           </div>
+
         </div>
       </div>
     </div>
@@ -89,7 +87,9 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/header.js"></script>
+        <script src="scripts/controllers/status.js"></script>
+        <script src="scripts/controllers/items.js"></script>
         <script src="scripts/angularfire/config.js"></script>
         <script src="scripts/angularfire/firebase.ref.js"></script>
         <script src="scripts/filters/reverse.js"></script>
