--- a/web/app/index.html
+++ b/web/app/index.html
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
             <ul class="nav navbar-nav" ng-controller="HeaderCtrl">
               <li ng-class="{ active: isActive('/')}"><a href="#/">Machines</a></li>
-              <li ng-class="{ active: isActive('/status')}"><a ng-href="#/status">Status</a></li>
+              <!-- <li ng-class="{ active: isActive('/status')}"><a ng-href="#/status">Status</a></li> -->
             </ul>
           </div>
 
@@ -82,14 +82,14 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-toArrayFilter/toArrayFilter.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/header.js"></script>
-        <script src="scripts/controllers/status.js"></script>
-        <script src="scripts/controllers/items.js"></script>
+        <script src="scripts/controllers/machines.js"></script>
         <script src="scripts/angularfire/config.js"></script>
         <script src="scripts/angularfire/firebase.ref.js"></script>
         <script src="scripts/filters/reverse.js"></script>
